<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KeyAssist</string>
    <string name="tap_click">single tap</string>
    <string name="double_click">Continuous tapping</string>
    <string name="swipe">swipe</string>
    <string name="direct_key">D-pad</string>
    <string name="zoom_out">zoom out</string>
    <string name="zoom_in">zoom in</string>
    <string name="enable_mouse">enable mouse</string>
    <string name="edit">edit</string>
    <string name="hide">hide</string>
    <string name="hint">Click the button to add to the corresponding position</string>
    <string name="apply">apply</string>
    <string name="exit">exit</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="save">save</string>
    <string name="direct_hint">Please enter the key</string>
    <string name="tap_hint">Please enter the key</string>
    <string name="scale_hint">Please enter the key</string>
    <string name="double_hint">Please enter the key</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_modify_hint" translatable="false">
        1. 按键主要分为点击键，十字键，连击键，放大，缩小，开启鼠标 \n
        2. 点击不同的按键，可以实现按键切换，当按键切换后，便可以点击屏幕上任意一点，进行映射 \n
        3. 点击enable mouse可以开启鼠标，当开启鼠标后，可以实现鼠标和按键同时运行 \n
        4. 可以点击每个按钮上的x，删除按键 \n
        5. 点击取消不会保存按键 \n
        6. 点击保存会保存所有按键到对应的方案中 \n
    </string>
    <string name="dialog">turn off the status bar</string>

</resources>