<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#1C1D2F"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginLeft="15dp"
            android:id="@+id/key_mapping_apply"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical"
            android:background="@drawable/key_mapping_apply"
            android:textColor="#FFFFFF"
            android:text="@string/apply"
            android:textSize="12sp"
            android:layout_width="45dp"
            android:layout_height="20dp"/>



        <LinearLayout
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/key_mapping_spinner"
            android:layout_width="160dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/key_mapping_plan_linear"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5px"
                    android:id="@+id/key_mapping_plan_text"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/key_mapping_spinner_down"
                    android:layout_marginLeft="85dp"
                    android:src="@drawable/key_mapping_spinner_down"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/key_mapping_exit"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical"
            android:background="@drawable/key_mapping_apply"
            android:textColor="#FFFFFF"
            android:text="@string/exit"
            android:textSize="12sp"
            android:layout_width="45dp"
            android:layout_height="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/key_mapping_tap_click"
                android:layout_gravity="center"
                android:background="@drawable/key_mapping_key_background"
                android:src="@drawable/key_mapping_tap_click"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:textSize="8sp"
                android:text="@string/tap_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/key_mapping_direct_click"
                android:layout_gravity="center"
                android:background="@drawable/key_mapping_key_background"
                android:src="@drawable/key_mapping_cross_key"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:textSize="8sp"
                android:text="@string/direct_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/key_mapping_double_click"
                android:layout_gravity="center"
                android:background="@drawable/key_mapping_key_background"
                android:src="@drawable/key_mapping_double_click"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:textSize="8sp"
                android:text="@string/double_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/key_mapping_scale"
                android:layout_gravity="center"
                android:background="@drawable/key_mapping_key_background"
                android:src="@drawable/scale"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:textSize="8sp"
                android:text="@string/zoom_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/key_mapping_amplify"
                android:layout_gravity="center"
                android:background="@drawable/key_mapping_key_background"
                android:src="@drawable/key_mapping_amplify"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:textSize="8sp"
                android:text="@string/zoom_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/key_mapping_open_cursor"
                android:layout_gravity="center"
                android:background="@drawable/key_mapping_key_background"
                android:src="@drawable/key_mapping_left_mouse"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:textSize="8sp"
                android:text="@string/enable_mouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


    <LinearLayout
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/key_mapping_cancel"
            android:background="@drawable/key_mapping_cancel"
            android:layout_weight="1"
            android:text="@string/edit"
            android:layout_width="0dp"
            android:layout_height="30dp"/>
        <Button
            android:id="@+id/key_mapping_save"
            android:layout_marginLeft="10dp"
            android:background="@drawable/key_mapping_cancel"
            android:layout_weight="1"
            android:text="@string/hide"
            android:layout_width="0dp"
            android:layout_height="30dp"/>
    </LinearLayout>

</LinearLayout>